# dt1d

./: README.md  dt1d.opam  dune-project
lib/: codec.ml  dune  model.atd  regression.ml  regression.mli
src/: dt1d.ml  dune
